--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,4 +32,5 @@ layout: compress
   </body>
 </html>
 
-<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=zuDpJ5etKfqfgxUfT9DtytaR54mqkvdYGnihWXUaA_Q"></script>
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=zuDpJ5etKfqfgxUfT9DtytaR54mqkvdYGnihWXUaA_Q&cl=ffffff&w=a"></script>
+<!-- https://clustrmaps.com/profile/1c3sv/widget/code/map -->
