--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,5 +32,5 @@ layout: compress
   </body>
 </html>
 
-<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=zuDpJ5etKfqfgxUfT9DtytaR54mqkvdYGnihWXUaA_Q&cl=ffffff&w=a"></script>
-<!-- https://clustrmaps.com/profile/1c3sv/widget/code/map -->
+<!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=zuDpJ5etKfqfgxUfT9DtytaR54mqkvdYGnihWXUaA_Q&cl=ffffff&w=a"></script>
+https://clustrmaps.com/profile/1c3sv/widget/code/map -->
