--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -132,6 +132,9 @@
        {% if author.researchgate %}
         <a href="{{ author.researchgate }}"><i class="fab fa-fw fa-researchgate" aria-hidden="true"></i></a>
       {% endif %}
+      {% if author.bilibili %}
+        <a href="{{ author.bilibili }}"><i class="fab fa-fw fa-youtube" aria-hidden="true"></i></a>
+      {% endif %}
       {% if author.twitter %}
         <a href="https://twitter.com/{{ author.twitter }}"><i class="fab fa-fw fa-twitter-square" aria-hidden="true"></i></a>
       {% endif %}
